# TechNotes

./: .gitignore  ASP.Net.md  Asio.md  Boost.md  C.md  CMake.md  CSharp.md  CleanCode.md  Conan.md  Cpp.md  Cpp_Complete_Ref.md  Database.md  Docker.md  Expect.md  FP_Programming.md  GIS.md  GLib.md  GStreamer.md  Git.md  Go.md  Java.md  Javascript.md  Jenkins.md  LinuxSystemProgramming.md  Linux_Shell.md  Lua.md  Networking.md  NumPy.md  OpenCV.md  OpenGL.md  PX4.md  Perl.md  Php.md  Python.md  Qt_Qml.md  README.md  ROS.md  Rust.md  SQLite.md  ScratchPad.md  (+13 more)
src/asio/: CMakeLists.txt  client.cpp  fib.cpp  multi_thread-v2.cpp  multi_thread.cpp  multi_timer.cpp  poll.cpp  post_dispatch.cpp  server.cpp  work.cpp
src/boost/: CMakeLists.txt  build.bat  client.cpp  format.cpp  lexical.cpp  md5csum.cpp  options.cpp  random.cpp  server.cpp  signal_1.cpp  signal_2.cpp  signal_arg.cpp  signal_ret.cpp  sock_test.cpp  split_string.cpp  str_algo1.cpp  udp_receiver.cpp  udp_sender.cpp
src/boost/asio/: CMakeLists.txt  async_client.cpp  blocked.cpp  build.bat  build_asio.bat  chat_server.cpp  client.cpp  client2.cpp  concurrent.cpp  context_plus_thread.cpp  cookbook_cancel.cpp  cookbook_client.cpp  cookbook_server.cpp  cookbook_socket.cpp  cookbook_streambuf.cpp  cookbook_tcp_async_read.cpp  cookbook_tcp_async_read_some.cpp  cookbook_tcp_async_write.cpp  cookbook_tcp_async_write2.cpp  cookbook_tcp_client.cpp  cookbook_tcp_server.cpp  cookbook_tcp_write.cpp  cookbook_udp_socket.cpp  cprj_tcp_client.cpp  cprj_tcp_server.cpp  deadline_timer.cpp  echo_server.cpp  echo_server2.cpp  executor.cpp  generic_server.cpp  hash.cpp  high_resolution_timer.cpp  multi_thread_post.cpp  multi_thread_post2.cpp  multithread.cpp  net_common.h  net_message.h  olc_net.h  post.cpp  post_work.cpp  (+13 more)
src/boost/boost_cpp_lib/: CMakeLists.txt  beast.cpp  deadline_timer.cpp  error_var.cpp  exception.cpp  fibonacci.cpp  handler.txt  poll.cpp  post_dispatch.cpp  post_dispatch_2.cpp  recurring_timer_2.cpp  steady_timer.cpp  steady_timer2.cpp  strand2.cpp  time_server.cpp  timer.cpp  tutorial.md  web_client.cpp  work.cpp  work2.cpp  work_thread.cpp  work_thread_ptr.cpp
src/catch2/: CMakeLists.txt  getitem.cpp
src/cpp/concurrency/: CMakeLists.txt  async1.cpp  async2.cpp  async3.cpp  async4.cpp  async_task.cpp  atomic1.cpp  background_task.cpp  cancel_thread.cpp  cond_var.cpp  cond_var2.cpp  condvar1.cpp  condvar2.cpp  deadlock1.cpp  dns_cache.cpp  dot_product_async.cpp  hello_world.cpp  latch.cpp  list_mutex.cpp  mutex1.cpp  mutex2.cpp  package.cpp  package2.cpp  parallel_accumulate.cpp  pass_reference.cpp  promise1.cpp  queue.cpp  sharedfuture1.cpp  stack.cpp  t1.cpp  t2.cpp  thread1.cpp  thread2.cpp  thread_guard.cpp
src/cpp/explore-c++20/: CMakeLists.txt  basic_variant.cpp  container_union.cpp  list0101.cpp  list0102.cpp  list0301.cpp  min-max.cpp  module-test.cpp  shared_future.cpp  sort-num.cpp  superfloat.cpp  variant_creation.cpp  work_queue.cpp
src/cpp/modern_challenges/: CMakeLists.txt  amstrong.cpp  array2d.cpp  bin_to_hex.cpp  compute_pi.cpp  fold_expr.cpp  game.cpp  hello.cpp  ip.cpp  minimum.cpp  out.cpp  prime.cpp  roman.cpp  spaceship.cpp  sum.cpp  temperature.cpp  utility.cpp
src/cpp/programming-with-c++20/: CMakeLists.txt  generic_add.cpp
src/cpp/sfml/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  animation.cpp  asset_test.cpp  bounce.cpp  brick.cpp  camera.cpp  client.cpp  font.cpp  font_test.cpp  fragment_shader.frag  game-world.cpp  game.cpp  game2.cpp  game_tile.cpp  image.cpp  in2post.cpp  mainMenu.cpp  mainMenu.hpp  mandelbroth.cpp  nt_game.cpp  rand_gen.cpp  random-circle.cpp  render.cpp  server.cpp  sfml_test.cpp  shadow.cpp  shape_circle.cpp  shapes.cpp  so2.cpp  so3.cpp  so4.cpp  so5.cpp  so_main.cpp  so_shader.cpp  square_game.cpp  tetris.cpp  tetris1.cpp  tetris2.cpp  (+5 more)
src/opengl/learn_opengl/: CMakeLists.txt  basic_fragment_shader.glsl  basic_vertex_shader.glsl  elem_buf.cpp  glad.c  hello.cpp
src/opengl/setup/: CMakeLists.txt  basic.shader  basic2.shader  cube.cpp  error_handling.cpp  glfw_intro.cpp  glut_intro.cpp  index_buffer.cpp  main.cpp  uniform.cpp  vertex_buffer.cpp  vertex_buffer2.cpp
src/qt/console/: CMakeLists.txt  main.cpp
src/qt/currencyapp/: CMakeLists.txt  currencymodel.cpp  currencymodel.h  exchange_rates.txt  main.cpp  rates.csv  widget.cpp  widget.h
src/qt/db/: CMakeLists.txt  capital_cities.csv  main.cpp  resources.qrc
src/qt/diagrameditor/: CMakeLists.txt  link.cpp  link.h  main.cpp  node.cpp  node.h  resources.qrc  window.cpp  window.h
src/qt/ftp/: CMakeLists.txt  main.cpp
src/qt/gotocell-2/: CMakeLists.txt  gotocelldialog.cpp  gotocelldialog.ui
src/qt/layout/: CMakeLists.txt  main.cpp
src/qt/model1/: CMakeLists.txt  main.qml
src/qt/plotter/: CMakeLists.txt  main.cpp  plotter.cpp  plotter.h  plotter.qrc
src/qt/spreadsheet/: CMakeLists.txt  cell.cpp  cell.h  finddialog.cpp  finddialog.h  gotocelldialog.h  gotocelldialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  sortdialog.h  sortdialog.ui  spreadsheet.cpp  spreadsheet.h  spreadsheet.qrc
src/qt6/hello/: CMakeLists.txt  main.cpp
src/sdl/: CMakeLists.txt  Game.cpp  Game.h  game_main.cpp  hello2.cpp  hello_sdl.cpp  image_show.cpp  main.cpp  sdl_init.c  sdl_setup.cpp  simple_win.cpp
src/wx/: CMakeLists.txt  curses2.c  curses3.c  event_handle.cpp  hello2.cpp  hello_curses.c  hello_wx.cpp
src/wx/aui_test/: CMakelists.txt  app.cpp
src/wx/burning_widget/: CMakeLists.txt  burning.cpp  burning.h  main.cpp  main.h  widget.cpp  widget.h
src/wx/chess/: main.cpp
src/wx/controls/: CMakeLists.txt  main.cpp
src/wx/customctrl/: CMakeLists.txt  drawingcanvas.cpp  drawingcanvas.h  graphicsobject.h  main.cpp
src/wx/dynamic_events/: CMakeLists.txt  app.cpp  app.h
src/wx/events/: CMakeLists.txt  main.cpp
src/wx/hello/: CMakeLists.txt  app.cpp  app.h  ctrl-resize.cpp  dialog.cpp  main.cpp  so_no_window.cpp
src/wx/image/: CMakeLists.txt  img_resize.py  main.cpp  main2.cpp  main3.cpp
src/wx/image_browser/: CMakeLists.txt  frame.cpp  frame.h  imagepanel.cpp  imagepanel.h  main.cpp
(+1090 files in other folders)
